--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    border: 5px solid grey;
+    justify-content: center;
+    align-items: center;
 }
