--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,61 @@
 
 body {
     display: flex;
+    margin: 5px;
     flex-direction: column;
     min-height: 100vh;
     border: 5px solid grey;
     justify-content: center;
     align-items: center;
+}
+
+main {
+    width: 30%;
+}
+
+h1 {
+    background-color: darkseagreen;
+    color: white;
+    padding: 10px;
+    text-transform: uppercase;
+    font-family: Helvetica;
+    text-align: center;
+}
+
+li, li span {
+    font-family: Helvetica;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    margin: 30px 0 30px 0;
+    color: sandybrown;
+}
+
+li span {
+    color: white;
+    margin-right: 10px;
+    text-align: center;
+    background-color: red;
+    padding: 5px;
+}
+
+input, button {
+    border: 3px solid darkseagreen;
+    height: 40px;
+}
+
+input {
+    width: 75%;
+}
+
+button {
+    background-color: white;
+    color: darkseagreen;
+    text-transform: uppercase;
+    font-weight: 600;
+    width: 24%;
 }
